@@ -15,6 +15,7 @@
  *  invocationPath - The invocationPath for the module. See {@link WFModuleInvocation}. Required.
  *  targetRootModule - If you want to customize the value of {@link WFModuleInvocation::$targetRootModule}, specify it in the param.
  *                     BOOLEAN, but remember that in smarty targetRootModule="false" passing the STRING false, so do targetRootModule=false
+ *  respondsToForms - Controls whether or not the instance of the module will "respond" to form submissions. Default: FALSE. This is useful when using WFSkinModuleView to embed functions like login or search into skins.
  *
  *  IMPORTANT!!!! WFSkinModuleView is intended for use only from skin template files. Results if used from a WFModule/Page are UNPREDICTABLE -- basically some functions will mistake the "root" module for the root of the skin rather than the root of the current WFModuleInvocation hierarchy when programmiatcally invoking WFModuleInvocations.
  *
@@ -26,6 +27,7 @@
 function smarty_function_WFSkinModuleView($params, $smarty)
 {
     if (empty($params['invocationPath'])) throw( new Exception("InvocationPath is required.") );
+    $respondsToForms = (isset($params['respondsToForms']) ? $params['respondsToForms'] : false);
 
     $rc = WFRequestController::sharedRequestController();
 
@@ -34,7 +36,7 @@ function smarty_function_WFSkinModuleView($params, $smarty)
     if (!$rootInv) return NULL;
 
     $modInvocation = new WFModuleInvocation($params['invocationPath'], $rootInv);
-    $modInvocation->setRespondsToForms(false);
+    $modInvocation->setRespondsToForms($respondsToForms);
     if (isset($params['targetRootModule']))
     {
         $modInvocation->setTargetRootModule($params['targetRootModule']);
