@@ -49,6 +49,7 @@ border-right: 1px solid black;
 }
 
 div.phocoaWFMessageBox {
+    color: black;
     width: 350px;
     border: 1px solid black;
     padding: 5px;
